fix layout shifts due to scrollbar when page updates

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -10,6 +10,7 @@ html,body {
   -moz-osx-font-smoothing: grayscale;
   background: var(--bg);
   color: var(--fg);
+  overflow-y: scroll;
 }
 #root {
   height: 100%;
